[project]
name = "map-miner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "drissionpage>=4.1.1.2",
    "geopy>=2.4.1",
    "ipython>=9.7.0",
    "notebook>=7.4.7",
    "playwright>=1.55.0",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.3",
]
